k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: banking-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-backend
  template:
    metadata:
      labels:
        app: banking-backend
    spec:
      containers:
      - name: backend
        image: yagyansh01/bankingbackend:v2
        ports:
        - containerPort: 3001
