k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: banking-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-db
  template:
    metadata:
      labels:
        app: banking-db
    spec:
      containers:
      - name: db
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-storage
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: db-pvc
