k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: banking-system
spec:
  selector:
    app: banking-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
